# bittorrent

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: bencode.cpp  bencode.hpp  debug_macros.hpp  decode_command.cpp  decode_command.hpp  display_info_command.cpp  main.cpp  parse_arguments.cpp  parse_arguments.hpp  torrent_reader.cpp  torrent_reader.hpp  utils.cpp  utils.hpp
src/commands/: decode.cpp  decode.hpp  display_info.cpp  display_info.hpp  download_piece.cpp  download_piece.hpp  handshake.cpp  handshake.hpp  info.cpp  info.hpp  peers.cpp  peers.hpp
src/lib/bencode/: bencode.hpp  bencode_decode.cpp  bencode_encode.cpp  decode.cpp  encode.cpp
src/lib/containers/: bytestream.cpp  bytestream.hpp
src/lib/network/: ip_address.cpp  network.hpp  peer_exchange.cpp  socket.cpp
src/lib/torrent/: peer_socket_wrapper.cpp  reader.cpp  reader.hpp  torrent.hpp  torrent_client.cpp  torrent_file.cpp
src/lib/utils/: utils.cpp  utils.hpp
src/tests/: bencode_tests.cpp  bytestream_tests.cpp  network_tests.cpp  sha1_tests.cpp  theory_tests.cpp  torrent_tests.cpp  utils.cpp  utils.hpp  utils_tests.cpp
tests/: bencode_tests.cpp
